# aI-lIVE-genie

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FEATURES.md  IMPLEMENTATION.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  api_server.py  cli.py  example.js  example_usage.py  index.js  memory_manager.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  streaming_data.py  test_api.py  test_memory_system.py  test_package.py
.github/workflows/: ci.yml
ai_live_genie/: __init__.py  config.py
ai_live_genie/fine_tuning/: __init__.py  model_fine_tuner.py  training_data_generator.py
ai_live_genie/integrations/: __init__.py  base_integration.py  chat_bot.py
ai_live_genie/models/: __init__.py  groq_model.py
ai_live_genie/training/: __init__.py  host_training_bot.py
ai_live_genie/utils/: __init__.py  helpers.py
docs/: API_REFERENCE.md  GETTING_STARTED.md  MULTI_PLATFORM_LIVE.md  PLATFORM_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  TRAINING_BOT_GUIDE.md
examples/: basic_usage.py  chat_bot_example.py  example_usage.py  example_website.html  fine_tuning_example.py  platform_manager_example.py  training_bot_example.py
frontend/components/: PlatformSelector.tsx
src/ai_live_genie/: __init__.py  api_server.py  cli.py  memory_manager.py
src/streaming/: adapter.ts  index.ts
src/streaming/adapters/: bigo.ts  liveme.ts  tiktok.ts  uplive.ts  youtube.ts
tests/: README.md  test_api.py  test_memory_system.py
